--- a/Chat.html
+++ b/Chat.html
@@ -10,7 +10,7 @@
     <div class="minibox">
               <div class="filling1">
                <h3>Discussion topic: What about Bill?</h3>
-               <p>Created by: Viktoria Pogonshikova &ensp; Created on: 06.12.2018</p>
+               <span>Created by: Viktoria Pogonshikova</span><span class="space">Created on: 06.12.2018</span>
        <div class="cross">
        <i class="fa fa-times" aria-hidden="true"></i>
         </div>
